chore: implement Configuration